icons and /.well-known/assetlinks.json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <p>I am a PoC of a PWA in the Play Store!</p>
+  <div class="content">
+    <p>I am a PoC of a PWA in the Play Store!</p>
+  </div>
+  <footer class="footer">Icon by: https://www.iconfinder.com/Rudityas</footer>
 </div>
 
 <router-outlet></router-outlet>
