--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,12 +1,23 @@
 .container {
-    align-items: center;
-    justify-content: center;
-    display: flex;
     height: 100%;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 
-    p {
-        font-size: large;
-        font-family: Arial, Helvetica, sans-serif;
+    .content {
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        height: 100%;
+        width: 100%;
+
+        p {
+            font-size: large;
+        }
+    }
+
+    footer {
+        position: absolute;
+        bottom: 0;
+        font-size: small;
     }
 }
